# code-status-macros

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
crates/code-status-macros/: Cargo.toml  README.md
crates/code-status-macros/src/: lib.rs
crates/code-status-scanner/: Cargo.toml  README.md
crates/code-status-scanner/src/: main.rs
examples/demo-project/: Cargo.toml  README.md
examples/demo-project/src/: main.rs
