[package]
name = "code-status-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for annotating code with development status markers and tracking technical debt"
license.workspace = true
readme = "README.md"
authors = ["Flashnet <hello@flashnet.xyz>"]
rust-version.workspace = true
repository.workspace = true


[lib]
proc-macro = true


[dependencies]
syn.workspace = true
quote.workspace = true


[lints]
workspace = true
